# agents-template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.http  test.py
.cursor/rules/: agents-template-backend-agents-api.mdc  agents-template-frontend-chat-dashboard.mdc  agents-template-overview.mdc  backend-ai-fastapi-langchain.mdc  frontend-ai-elements.mdc
.cursor/rules/backend/: agents-langchain.mdc  agents.mdc
.cursor/rules/frontend/: agents.mdc  ai-elements.mdc
agents/weather_agent/: agent.py
agents/web_search_agent/: agent.py
agents/web_search_agent/core/: __init__.py  duckduckgo.py  optimized_requests.py  scrapper.py  search.py
agents/web_search_agent/tools/: web_search.py
api/agents/: discovery.py  executors.py
api/routes/: admin.py  chat.py  models.py
api/routes/agents/: __init__.py  admin.py  ai_sdk.py  chat.py  models.py  threads.py
api/services/agents/: discovery.py  executors.py  registry.py  streaming.py  tools.py  utils.py
api/streaming/: google_stream.py  langchain_stream.py
api/utils/: tools.py
apis/: main.py
backend/: alembic.ini  pyproject.toml  ruff.toml
backend/agents/weather_agent/: agent.py
backend/agents/weather_agent/tools/: get_weather.py
backend/agents/web_search_agent/: agent.py
backend/agents/web_search_agent/core/: optimized_requests.py  scrapper.py  search.py
backend/agents/web_search_agent/tools/: web_search.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_03_04_1414-fa7c0bfe29f9_initial.py  2026_04_27_2222-ce67598aaf6f_initial.py
backend/config/: agents.py  api.py  api_keys.py  checkpointer.py  database.py  prompt_cache.py  tools.py
backend/examples/: web_search_agent_use.py
backend/scripts/: load_default_data.py  reset_postgres.py  sync_agents_to_another_fastapi_project.py  test_cache_and_cost.py
backend/src/api/: __init__.py  main.py
backend/src/api/core/agents/: callbacks.py  checkpointer.py  custom_providers.py  history_window.py  models.py  prompt_cache.py  schemas.py
backend/src/api/models/: metadata.py
backend/src/api/models/agents/: __init__.py  checkpoint.py  history.py  usage.py
backend/src/api/repositories/agents/: chat_history.py  usage.py
backend/src/api/routes/agents/: __init__.py  chat.py  models.py  threads.py
backend/src/api/services/agents/: executors.py  history.py  registry.py  streaming.py  tools.py  utils.py
benchmarks/: ollama_concurrent_requests.py
config/: agents.py  checkpointer.py
constants/: ai_models.py  api.py  api_keys.py
docs/: HPE_AGENTS_MARKUP.md  coordinator_instructions.md  database_documentation.md  nvidia-nim-models-filtered.json  nvidia-nim-models.json
environment/: api_keys.py
examples/: web_search_agent_use.py
frontend/: .cta.json  components.json  index.html  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: AppSidebar.tsx  ChatView.tsx
frontend/src/components/ai-elements/: prompt-input.tsx  speech-input.tsx
frontend/src/components/layouts/: auth-layout.tsx  home-layout.tsx  sidebar-layout.tsx
frontend/src/components/sidebar/: app-sidebar.tsx
frontend/src/components/theme/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx
frontend/src/hooks/: useUserId.ts
frontend/src/lib/: api.ts  thread-messages-cache.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/agent/: $agentId.tsx
frontend/src/routes/chat/: $agentId.tsx
google_agents/database_query_agent/: agent.py  database.py
google_agents/generate_charts_agent/: agent.py  charts.py
google_agents/image_agent/: __init__.py  agent.py
google_agents/image_agent/tools/: generate_image.py
google_agents/test_agent/: agent.py
google_agents/weather_agent/: agent.py
google_agents/weather_agent/tools/: get_weather.py
langchain_agents/: README.md
langchain_agents/weather_agent/: agent.py
langchain_agents/weather_agent/tools/: get_weather.py
langchain_agents/web_search_agent/: agent.py
langchain_agents/web_search_agent/tools/: web_search.py
llms/: azure.py  fireworks.py  google.py  groq.py  nvidia.py  open_router.py
notebooks/: 1 - Lab.ipynb
scripts/: pyproject_update.py  sync_agents_to_another_fastapi_project.py  uv_upgrade_pyproject_dependencies.py
utilities/agents/: google.py
utilities/web_search/: __init__.py  duckduckgo.py  optimized_requests.py  scrapper.py  search.py
