[project]
name = "agents-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckpy>=2.1.1",
    "fastapi[standard]>=0.124.0",
    "fastexcel>=0.18.0",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langchain-nvidia-ai-endpoints>=1.0.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "environment", "langchain_agents", "utilities"]

[tool.hatch.build.targets.wheel.sources]
"api" = "api"
"environment" = "environment"
"langchain_agents" = "langchain_agents"
"utilities" = "utilities"
