[project]
name = "agents-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckpy>=2.1.1",
    "fastapi[standard]>=0.128.0",
    "fastexcel>=0.19.0",
    "fpdf2>=2.8.5",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-nvidia-ai-endpoints>=1.0.3",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "markitdown[all]>=0.1.4",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "orjson>=3.11.7",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "config"]

[tool.hatch.build.targets.wheel.sources]
"agents" = "agents"
"api" = "api"
"config" = "config"
